Fix(all files) - исправлены названия файлов, функций(camelCase), добавлены empty в проверке, изменен or на ||, укомплектовал рекурсию, ввел константы и правильный нейминг переменных

--- a/changes.txt
+++ b/changes.txt
@@ -21,3 +21,10 @@ POST-запросы(30 минут)
 
 20.05.2024
 Добавлен вывод дерева через рекурсию(2 часа)
+
+21.05.2024
+Исправлены названия файлов, функций(camelCase)(15 минут)
+Добавлены empty в проверке(10 минут)
+Изменен or на ||(10 минут)
+Укомплектовал рекурсию, ввел константы и правильный нейминг переменных(30 минут)
+ 
