fix(All files) - исправлен вывод дерева через children, подгон под psr12, исправлены названия переменных(camelCase)

--- a/changes.txt
+++ b/changes.txt
@@ -26,5 +26,10 @@ POST-запросы(30 минут)
 Исправлены названия файлов, функций(camelCase)(15 минут)
 Добавлены empty в проверке(10 минут)
 Изменен or на ||(10 минут)
-Укомплектовал рекурсию, ввел константы и правильный нейминг переменных(30 минут)
+Укомплектовал рекурсию, ввел константы и правильный нейминг переменных(50 минут)
+
+22.05.2024
+Исправлен вывод дерева через children(1 час)
+Подгон под psr12(psr2)(40 минут)
+Исправлены названия переменных(camelCase)(30 минут)
  
